--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-	"name": "discordbot-template",
-	"version": "3.3.1",
-	"description": "A modified template based on discordjs.guide to create your own discord-js based bot!",
-	"funding": "https://ko-fi.com/namanvrati",
+	"name": "moonwalker",
+	"version": "0.1.0",
+	"description": "Bot to archive forum posts.",
 	"types": "./typings.d.ts",
 	"main": "bot.js",
 	"scripts": {
@@ -10,35 +9,29 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/NamVr/DiscordBot-Template.git"
+		"url": "git+https://github.com/readonlychild/moonwalker.git"
 	},
 	"keywords": [
 		"discord-js"
 	],
 	"author": {
-		"name": "Naman Vrati",
-		"url": "https://github.com/NamVr",
-		"email": "info@namanvrati.cf"
+		"name": "Ernesto Lopez",
+		"url": "https://github.com/readonlychild",
+		"email": "neto.lopez@gmail.com"
 	},
-	"contributors": [
-		{
-			"name": "Krish Garg",
-			"url": "https://github.com/KrishGarg"
-		},
-		{
-			"name": "Thomas Fournier",
-			"email": "thomas@artivain.com",
-			"url": "https://github.com/GoudronViande24"
-		}
-	],
+	"contributors": [],
 	"license": "Apache-2.0",
 	"bugs": {
-		"url": "https://github.com/NamVr/DiscordBot-Template/issues"
+		"url": "https://github.com/readonlychild/moonwalker/issues"
 	},
-	"homepage": "https://github.com/NamVr/DiscordBot-Template#readme",
+	"homepage": "https://github.com/readonlychild/moonwalker#readme",
 	"dependencies": {
 		"@discordjs/rest": "^1.0.0",
+		"aws-sdk": "^2.1238.0",
+		"axios": "^1.1.3",
 		"discord-api-types": "^0.36.2",
-		"discord.js": "^14.0.2"
+		"discord.js": "^14.0.2",
+		"dotenv": "^16.0.3",
+		"moment": "^2.29.4"
 	}
 }
